# VigilAI

./: .env.example  .gitignore  Makefile  README.md  demo_run.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: graph.py  nodes.py  prompts.py
api/: main.py  models.py
api/routers/: agents.py  ml.py  sensors.py
core/: __init__.py  config.py  exceptions.py  logging.py
dashboard/: app.py
data/: generate_data.py
db/: models.py
docker/: Dockerfile.api  Dockerfile.dashboard
knowledge_base/: maintenance_docs.py
ml/: feature_engineering.py  predict.py  train.py
mlflow_tracking/: setup.py
rag/: build_index.py  retriever.py
tests/: conftest.py  test_agents.py  test_api.py  test_ml.py
